--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1048,23 +1048,34 @@ section {
 }
 
 .contact .info h4 {
-  padding: 0 0 0 60px;
+  padding: 0 0 0 10px;
   font-size: 22px;
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 0;
   color: #45505b;
 }
 
 .contact .info p {
-  padding: 0 0 0 60px;
+  padding: 0 0 0 10px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 22px;
   color: #728394;
 }
 
 .contact .info .email,
 .contact .info .phone {
   margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact .info .reminder p {
+  font-size: 14px;
+  color: #728394;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
 }
 
 .contact .info .email:hover i,
