--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1076,6 +1076,7 @@ section {
   margin-top: 100px;
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 .contact .info .email:hover i,
