--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,9 +448,31 @@ section {
   text-indent: 30px;
 }
 
-.about .portfolio-details-slider .swiper-pagination {
+.about .about-slider .swiper-pagination {
   margin-top: 20px;
   position: relative;
+}
+
+.about .about-slider img {
+  width: 100%;
+}
+
+
+.about .about-slider .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+
+.about .about-slider .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #0563bb;
+}
+
+.about .about-slider .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #0563bb;
 }
 
 /*--------------------------------------------------------------
