--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Factory Obscura Photo.jpg") top right no-repeat;
+  background: url("../img/Background\ Casual.jpg") top right no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -416,6 +416,12 @@ section {
   font-weight: 700;
   font-size: 26px;
   color: #728394;
+}
+
+.about .content h2 {
+  font-size: 14.2px;
+  line-height: 130%;
+  padding: 5px;
 }
 
 .about .content ul {
