Testing Loading Bard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,32 @@ h6 {
 }
 
 /*--------------------------------------------------------------
+# Loading bar preloader
+--------------------------------------------------------------*/
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.progress-bar {
+  width: 80%;
+  max-width: 400px;
+  height: 20px;
+  background-color: #e0e0e0;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.progress {
+  width: 0;
+  height: 100%;
+  background-color: #0563bb;
+  transition: width 0.2s;
+}
+
+/*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
