--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,29 +117,32 @@ h6 {
 /*--------------------------------------------------------------
 # Loading bar preloader
 --------------------------------------------------------------*/
+
+/* Preloader with Bootstrap Progress Bar
+-----------------------------------------------*/
+.loader {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 99;
+  background-color: #FFFFFF;
+}
 .loader-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+	width: 600px;
+	height: 200px;
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	text-align: center;
 }
-
-.progress-bar {
-  width: 80%;
-  max-width: 400px;
-  height: 20px;
-  background-color: #e0e0e0;
-  border-radius: 10px;
-  overflow: hidden;
+.progress-bar{
+    background-color: #0563bb;
 }
-
-.progress {
-  width: 0;
-  height: 100%;
-  background-color: #0563bb;
-  transition: width 0.2s;
-}
-
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
